Modify container in bootstrap to ensure 100% stretch

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -33,7 +33,6 @@ nav {
 .subtab-div {
   background-color: #fff;
   clear: both;
-  width: 100%;
 }
 
 .subtabs {
